some progress on site header—main thing left is fixing the nav alignment and spacing

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -26,13 +26,18 @@ body {
 
 
 .site-header {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     border-bottom: 3px solid var(--secondary-accent);
     padding: 10px;
     background-color: var(--primary-accent);
 }
 
-.site-header * {
-    display: inline-block;
+.site-header nav {
+    display: flex;
+    justify-self: center;
 }
 
 .nav-button{
@@ -44,5 +49,8 @@ body {
 
 
 .content {
+    position: absolute;
+    width: 50%;
+    height: 75%;
     background-color: var(--content-background);
 }
